cloud_formation/03_sg.yml
AWSTemplateFormatVersion: 2010-09-09

Description: "CloudFormation Templete for creating SecurityGroup"

Parameters:
  PREFIX:
    Type: String
    Default: "practice"

Resources:
  # EC2 SecurityGroup
  ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${PREFIX}-ec2-sg
      GroupDescription: "SecurityGroup for EC2"
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref elbSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${PREFIX}-ec2-sg

  # ELB SecurityGroup
  elbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${PREFIX}-elb-sg
      GroupDescription: "SecurityGroup for ELB"
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${PREFIX}-elb-sg

  # RDS SecurityGroup
  rdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${PREFIX}-rds-sg
      GroupDescription: "SecurityGroup for RDS"
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ec2SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${PREFIX}-rds-sg

Outputs:
  EC2SecurityGroupId:
    Value: !Ref ec2SecurityGroup
    Export:
      Name: EC2SecurityGroupId
  ELBSecurityGroupId:
    Value: !Ref elbSecurityGroup
    Export:
      Name: ELBSecurityGroupId
  RDSSecurityGroupId:
    Value: !Ref rdsSecurityGroup
    Export:
      Name: RDSSecurityGroupId
